log
Fri Mar 18 11:30:26 HSP 2022: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0fd6f9e
Fri Mar 18 11:32:13 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
79adea3
Fri Mar 18 11:40:02 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9ad43be
Fri Mar 18 11:47:42 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
b144cd4
Fri Mar 18 11:49:07 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
363d39f
Fri Mar 18 11:50:33 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
3222756
Fri Mar 18 11:52:53 HSP 2022: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
897d513
Fri Mar 18 11:54:33 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3a70a07
Fri Mar 18 11:56:44 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd3ad9d
Fri Mar 18 11:57:23 HSP 2022: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
3c863a2
Fri Mar 18 11:58:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7756a71
Fri Mar 18 11:58:31 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
1f993f3
Fri Mar 18 12:00:22 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
01af462
Fri Mar 18 12:02:52 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d577124
Fri Mar 18 12:03:13 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
fee4e5b
Fri Mar 18 12:05:06 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
02934f0
Fri Mar 18 12:13:54 HSP 2022: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
a6925d2
Fri Mar 18 18:36:27 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
90b57cd
Sun Mar 20 22:43:24 HSP 2022: 
 list.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:134:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:112:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5341fb3
Sun Mar 20 22:43:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47cf9e1
Sun Mar 20 22:43:54 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
03fac23
Sun Mar 20 22:44:50 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6847706
Sun Mar 20 22:46:56 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
60f13f3
Sun Mar 20 22:49:31 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
9052623
Sun Mar 20 22:51:10 HSP 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 60/70
b9919e0
Sun Mar 20 22:51:31 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 60/70
82f11fe
